# cxx-template

./: .gitignore  CMakeLists.txt  ctest.sh  test.sh
src/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
tests/: .clangd  CMakeLists.txt  general_test.cpp  prefixes_test.cpp
tests/data/: pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in  pub11.in  pub12.in
